name:                TwinPeaks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eggplantbren/TwinPeaks#readme
license:             BSD3
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          brendon.brewer@gmail.com
copyright:           (c) 2017 Brendon J. Brewer
category:            Science
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:     TwinPeaks.Sampler
  build-depends:       base >= 4.7 && < 5,
                       vector
  ghc-options:         -Wall -O2

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5,
                       TwinPeaks
